# sentinel

./: .gitignore  CHANGELOG.md  CHANGELOG_EN.md  Cargo.toml  ESTRUCTURA.md  Makefile  README.md  STRUCTURE.md  install.bat  install.ps1  install.sh
docs/: ai-providers.md  architecture.md  configuration.md  installation.md  roadmap.md
src/: ai.rs  config.rs  docs.rs  files.rs  git.rs  main.rs  stats.rs  tests.rs  ui.rs
src/ai/: analysis.rs  client.rs  framework.rs  mod.rs  models.rs  testing.rs
