[package]
name = "sentinel-rust"
version = "4.4.1"
edition = "2024"

[dependencies]
notify = "6.1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
